--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio id="alarmSound" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+    <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
     <div class="container">
         <h1>ポモドーロタイマー</h1>
         <div class="timer-container">
