Add audio loading status check

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
+    <audio id="alarmSound" src="alarm.mp3" preload="auto" controls></audio>
+    <div id="audioStatus">音声ファイルの準備中...</div>
     <div class="container">
         <h1>ポモドーロタイマー</h1>
         <div class="timer-container">
