--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio id="alarmSound" src="alarm.mp3" preload="auto" controls></audio>
-    <div id="audioStatus">音声ファイルの準備中...</div>
+    <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
     <div class="container">
         <h1>Pomodoro Timer</h1>
         <div class="timer-container">
