--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <button id="stopSoundBtn" class="btn" style="display: none;">Mute Alarm</button>
             </div>
             <div class="preset-buttons">
-                <button class="preset-btn" data-work="25" data-break="5">25分/5分</button>
-                <button class="preset-btn" data-work="25" data-break="10">25分/10分</button>
+                <button class="preset-btn" data-work="25" data-break="5">25min/5min</button>
+                <button class="preset-btn" data-work="25" data-break="10">25min/10min</button>
             </div>
         </div>
         <div class="settings">
