--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="controls">
                 <button id="startBtn" class="btn">Start</button>
                 <button id="resetBtn" class="btn">Reset</button>
-                <button id="stopSoundBtn" class="btn" style="display: none;">Mute Alarm</button>
             </div>
             <div class="preset-buttons">
                 <button class="preset-btn" data-work="25" data-break="5">25min/5min</button>
                 <button class="preset-btn" data-work="25" data-break="10">25min/10min</button>
             </div>
+            <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem;">Mute Alarm</button>
         </div>
         <div class="settings">
             <div class="setting-item">
