--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
         </div>
         <div class="settings">
             <div class="setting-item">
-                <label for="workTime">Focus (min):</label>
+                <label for="workTime">Focus</label>
                 <input type="number" id="workTime" value="25" min="1" max="60">
-            </div>
-            <div class="setting-item">
-                <label for="breakTime">Recharge (min):</label>
+                <label for="breakTime">/ Recharge</label>
                 <input type="number" id="breakTime" value="5" min="1" max="30">
+                <span class="time-unit">(min)</span>
             </div>
         </div>
     </div>
