Update settings layout and Mute Alarm button position

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="preset-buttons">
                 <button class="preset-btn" data-work="25" data-break="5">25min/5min</button>
                 <button class="preset-btn" data-work="25" data-break="10">25min/10min</button>
+                <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem; margin-bottom: 1rem;">Mute Alarm</button>
             </div>
         </div>
         <div class="settings">
