Move Mute Alarm button below preset buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h1>Pomodoro Timer</h1>
         <div class="timer-container">
             <div id="timer" class="timer">25:00</div>
-            <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem;">Mute Alarm</button>
             <div class="controls">
                 <button id="startBtn" class="btn">Start</button>
                 <button id="resetBtn" class="btn">Reset</button>
@@ -21,7 +20,7 @@
                 <button class="preset-btn" data-work="25" data-break="5">25min/5min</button>
                 <button class="preset-btn" data-work="25" data-break="10">25min/10min</button>
             </div>
-            <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem;">Mute Alarm</button>
+            <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem; margin-bottom: 1rem;">Mute Alarm</button>
         </div>
         <div class="settings">
             <div class="setting-item">
