Move Mute Alarm button below preset buttons with proper container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <button class="preset-btn" data-work="25" data-break="5">25min/5min</button>
                 <button class="preset-btn" data-work="25" data-break="10">25min/10min</button>
             </div>
-            <button id="stopSoundBtn" class="btn" style="display: none; margin-top: 1rem; margin-bottom: 1rem;">Mute Alarm</button>
+            <div class="mute-alarm-container">
+                <button id="stopSoundBtn" class="btn" style="display: none;">Mute Alarm</button>
+            </div>
         </div>
         <div class="settings">
             <div class="setting-item">
