--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="setting-item">
                 <label for="workTime">Focus:</label>
                 <input type="number" id="workTime" value="25" min="1" max="60">
-                <span class="time-unit">(min)</span>
+                <span class="time-unit">min</span>
             </div>
             <div class="setting-item">
                 <label for="breakTime">Recharge:</label>
                 <input type="number" id="breakTime" value="5" min="1" max="30">
-                <span class="time-unit">(min)</span>
+                <span class="time-unit">min</span>
             </div>
         </div>
     </div>
